--- a/styles/our-courses-mobile.css
+++ b/styles/our-courses-mobile.css
@@ -2,7 +2,7 @@
   * {
     box-sizing: border-box;
   }
-  
+
   .mobile {
     display: block;
   }
@@ -61,7 +61,21 @@
     flex-direction: column;
     width: 100%;
     margin: auto;
-    border: solid red 2px;
+  }
+  .standard-courses-top,
+  .refresher-courses-top,
+  .conversation-courses-top {
+    display: flex !important;
+    flex-direction: row;
+    padding-top: 1em;
+  }
+  .standard-courses-heading,
+  .refresher-courses-heading,
+  .conversation-courses-heading {
+    display: flex;
+    flex-direction: column;
+    padding: 0.5em;
+    padding-left: 0.8em;
   }
   .standard-courses-content,
   .conversation-courses-content {
@@ -71,7 +85,11 @@
     width: 90%;
     height: auto;
     align-self: flex-end;
-    border: solid blue 2px;
+  }
+  .medium-message-standard-courses,
+  .medium-message-refresher-courses,
+  .medium-message-conversation-courses {
+    font-size: 14px;
   }
   .overview-cards-row-1,
   .overview-cards-row-2 {
@@ -90,21 +108,36 @@
     box-shadow: 17px 17px 52px 17px rgba(0, 0, 0, 0.11);
   }
   .overview-card-image {
-    padding-top: 10em;
+    padding-top: 1em;
     align-self: left;
     height: 40%;
   }
   .enroll-now-btn {
     justify-content: center;
     align-content: center;
-    margin-left: 4em;
+    margin-left: 6em;
   }
   .refresher-courses-container {
     display: flex;
     flex-direction: column;
+    margin-left: 1em;
+  }
+  .refresher-courses-image {
+    width: 90vw;
+    height: auto;
+    align-self: flex-start;
   }
   .refresher-courses-content {
     padding-left: 0.2em;
+  }
+  .refresher-courses-top-image,
+  .conversation-courses-top-image {
+    width: 40%;
+  }
+  .large-message-refresher-courses,
+  .large-message-conversation-courses {
+    font-size: 20px;
+    line-height: normal;
   }
   .refresher-courses-cards {
     display: flex;
@@ -123,5 +156,6 @@
   .conversation-courses-container {
     display: flex;
     flex-direction: column;
+    margin-left: 1em;
   }
 }
